--- a/child_pages/cc-elections/Candidates/lods.html
+++ b/child_pages/cc-elections/Candidates/lods.html
@@ -142,20 +142,22 @@
               <h6 class="page-title">Victoria Lods</h6>
               <p>          
 
-                Victoria Groetsch-Lods is a first-term Cumberland County Commissioner with a multifaceted background in communications, agriculture, education, 
-                and public service. She’s worked as a high school teacher, chief of staff in the State Senate, and served as the first executive director of 
-                Cumberland County Habitat for Humanity. Her public messaging emphasizes a commitment to education, agriculture, mental health and addiction 
-                services, and community resilience.
+                Victoria Groetsch-Lods is a first-term Cumberland County Commissioner with a background spanning communications, education, agriculture, 
+                and nonprofit leadership. She has served as a high school teacher, chief of staff in the State Senate, and the first executive director 
+                of Cumberland County Habitat for Humanity. Active on her family’s fifth-generation farm, she brings a direct perspective on the challenges 
+                facing agriculture and frequently emphasizes the importance of meeting people “where they are” to ensure programs and resources are accessible.
                 <br>
                 <br>
-                Lods is frequently seen at community events and regularly attends Republican gatherings, including the bi-weekly party breakfasts—though those 
-                events have recently shifted in nature, limiting public access. Still, she maintains a steady public presence and has become increasingly 
-                active on Facebook, using the platform to share her work and highlight specific priorities.
-                <br>
-                <br>
-                That said, her campaign has yet to present a fully structured platform outlining her policy goals or current stances in one place. While her 
-                messaging has grown more specific over time, much of it remains spread across individual posts and public appearances, making it harder for 
-                voters to assess her full agenda at a glance.
+                Her current agenda highlights <strong>agriculture advocacy</strong> (connecting farmers with state programs and Rutgers partnerships), 
+                <strong>education and workforce development</strong> (expanding CCTECH seats and trade pathways), <strong>addiction and recovery 
+                awareness</strong> (with a focus on parent outreach), and <strong>responsible growth projects</strong> like the Nabb Avenue extension. 
+                She also stresses that recreation, open space, and health are essential to making Cumberland more attractive for employers and families.
+                    <br>
+                    <br>
+                Lods is a consistent presence at civic events and county functions and has been more accessible than many peers in engaging with local press 
+                and interviews. She has 
+                increasingly outlined concrete initiatives and accomplishments, offering voters a clearer picture of her priorities compared to earlier in 
+                her tenure.
                 <br>
                 <br>
                 Click the red x at the top of this box and then scroll down down for more in-depth information and sources.
@@ -171,26 +173,23 @@
               <h4 class="quick-sum">Rating Explanation</h4>
               <h6 class="page-title">Victoria Lods</h6>
               <p>          
-
-                Across the county, some local campaigns continue to fall short when it comes to transparency—offering little more than scattered social media 
-                posts, vague slogans, or interviews that veer off into dinner specials or decades-old political nostalgia. For voters trying to make 
-                informed decisions, this patchwork approach often becomes a barrier to engagement.
+                Across Cumberland County, candidate communication often remains inconsistent—some relying on scattered social media posts, others sticking 
+                to broad slogans, and many avoiding direct press engagement altogether. In that environment, the burden on voters to piece together 
+                meaningful information is unreasonably high, and the lack of standardized, centralized campaign expectations only reinforces the gap.
                 <br>
                 <br>
-                In that context, Commissioner Victoria Groetsch-Lods stands out for providing a clearly structured and relevant interview that breaks from the 
-                usual pattern. Rather than mixing in unrelated content or burying useful details, her recent interview offers two distinct halves: one focused 
-                on her background and experience, and the other on specific county-level issues and her forward-looking agenda. This format not only builds 
-                trust in the content itself, but makes it easier for voters to jump to the parts that matter most to their personal decision-making.
+                Against this backdrop, Commissioner Victoria Groetsch-Lods has shown clear progress this election season. She has not only participated in 
+                a structured, in-depth interview that separated her background from her agenda, but also provided detailed responses on agriculture, 
+                education, addiction, and infrastructure in ways that break from the county’s usual “surface-level” trend. These efforts make her more 
+                accessible and transparent than many peers and demonstrate what is possible when candidates engage with voters through substantive formats.
                 <br>
                 <br>
-                The interview now lives on this information hub as a reference point for the public—a strong step in the right direction. While this doesn't 
-                yet represent full-spectrum transparency, it sets a higher bar than many other candidates and offers a credible foundation to build on.
-                <br>
-                <br>
-                Furthermore, she is now scheduled to appear on our radio show on WVLT, 92.1 FM on Tuesday September 30th from 5-6pm. This should serve as an opportunity to continue to follow this 
-                model—addressing more issues, making comparisons clearer, and responding to developments as campaign 
-                season unfolds—Lods could help reframe what transparency looks like for down-ballot races. The door is open for voters to stay informed, and 
-                for the candidate to continue rising above the status quo.
+                Her trajectory continues to trend upward as she remains consistently present at public events and open to dialogue with local press. 
+                While full-spectrum transparency would benefit from a countywide system that centralizes and standardizes campaign information, Lods has 
+                built a credible foundation that sets her apart within the current status quo. If other candidates followed suit—or if the county established 
+                clearer expectations for all—voters would have a much easier time making informed decisions. For now, her approach signals a constructive step 
+                forward, both for her own campaign and for what transparency could look like across Cumberland County.
+                
                 <br>
                 <br>
                 Click the red x at the top of this box and then scroll down down for more in-depth information and sources.
@@ -573,7 +572,7 @@
                 <summary style="color: blue;"><strong>Education & Workforce Pathways</strong></summary>
                 <p>
                 As a high school teacher and commissioner liaison, Lods emphasizes adapting instruction to today’s tech realities,
-                expanding <strong>CTE</strong> seats (Cumberland County Technical Education Center), and aligning districts with <strong>RCSJ</strong> and union apprenticeships.
+                expanding <strong>CCTECH</strong> seats (Cumberland County Technical Education Center), and aligning districts with <strong>RCSJ</strong> and union apprenticeships.
                 Priority: build a <strong>skilled workforce pipeline</strong> so employers see Cumberland County as a place to hire and stay.
                 </p>
             </details>
@@ -652,7 +651,7 @@
             <details>
                 <summary style="color: blue;"><strong>Education Performance & CTE Expansion</strong></summary>
                 <p>
-                Acknowledges local performance concerns; focuses on <strong>CTE growth</strong>, early college pathways, and district–employer alignment
+                Acknowledges local performance concerns; focuses on <strong>CCTECH growth</strong>, early college pathways, and district–employer alignment
                 to raise outcomes and meet labor demand.
                 </p>
             </details>
@@ -693,9 +692,9 @@
 
             <li>
             <details>
-                <summary style="color: blue;"><strong>CTE Seat Expansion & Liaison Work</strong></summary>
+                <summary style="color: blue;"><strong>CCTECH Seat Expansion & Liaison Work</strong></summary>
                 <p>
-                As liaison for <strong>RCSJ</strong>, <strong>CCT</strong>, and K-12 districts, supported the successful pursuit of funding to
+                As liaison for <strong>RCSJ</strong>, <strong>CCTECH</strong>, and K-12 districts, supported the successful pursuit of funding to
                 <strong>expand CCT seats</strong> and strengthen school–college–union pipelines into the trades and advanced manufacturing.
                 </p>
             </details>
