--- a/child_pages/cc-elections/Candidates/lods.html
+++ b/child_pages/cc-elections/Candidates/lods.html
@@ -294,7 +294,7 @@
      </div>
 
      <div class="gauge-box">
-        <h4 class="sub-heading extra-long">Transparency/Accessibility Rating: Above Average</h4>
+        <h4 class="sub-heading extra-long">Transparency/Accessibility Rating: Above Average (Poised for Top Tier)</h4>
         <a href="../../../child_pages/cc-elections/transparency_standards_page.html" target="_blank" rel="noopener noreferrer" class="website-link"><button class="candidate-ext-site">Transparency Standards Explained</button></a>                 
 
         <img class="gauge" src="../../../assets/gauge_okay.svg" alt="">
