gregoire meta pic removed

--- a/index.html
+++ b/index.html
@@ -168,7 +168,8 @@
                 <ol style="margin-top:10px; line-height:1.6;">
                     <li>If this is your first time using this site, you may want to follow the suggested steps.</li>
                     <br>
-                    <li>If you're on a desktop or laptop computer, use the drop down menu labeled "Elections" to find the election you're interested in. Then continue following suggested steps.</li>
+                    <li>If you're on a desktop or laptop computer, use the drop down menu labeled "Elections", literally below this set of instructions, 
+                      to find the election you're interested in. Then continue following suggested steps.</li>
                     <br>
                     <li>If you're on a smartphone or iPad, use the red menu in the top left of the screen to find the election you're interested in. Then continue following suggested steps.</li>
                     <br>
