capizola page update

--- a/child_pages/cc-elections/Candidates/capizola.html
+++ b/child_pages/cc-elections/Candidates/capizola.html
@@ -149,31 +149,37 @@
               <h6 class="page-title">John P. Capizola</h6>
               <p>          
 
-                John P. “Johnny” Capizola, Jr. is a lifelong Vineland resident, educator, coach, and small-business owner now seeking a full 
-                elected term on the Cumberland County Board of Commissioners. He was appointed by the County Democratic Committee in January 
-                2023 to fill an unexpired seat and says the experience has helped him “get his feet wet” in county government while learning 
-                how to navigate what he describes as a less partisan, more collaborative board.
+                John P. “Johnny” Capizola, Jr. is a lifelong Vineland resident, educator, coach, and small-business owner now seeking a full elected term on 
+                the Cumberland County Board of Commissioners. He was appointed by the County Democratic Committee in January 2023 to fill an unexpired seat 
+                and says the experience has helped him “get his feet wet” in county government while learning how to navigate what he describes as a less 
+                partisan, more collaborative board.
                 <br>
                 <br>
-                Capizola has taught health and physical education in Vineland Public Schools for more than 22 years, holds a master’s degree in 
-                Educational Leadership from Wilmington University (summa cum laude), and is certified as a New Jersey principal and supervisor. 
-                Outside the classroom he has coached youth sports across Vineland and Atlantic City, served on the Vineland Midget Football 
-                League board, and run small businesses including Serafina’s Ristorante & Pizzeria and Parkside Laundromat—experience he says 
-                informs his interest in attracting new business and keeping residents in the county.
+                Capizola has taught health and physical education in Vineland Public Schools for more than 22 years, holds a master’s degree in Educational 
+                Leadership from Wilmington University (summa cum laude), and is certified as a New Jersey principal and supervisor. Outside the classroom 
+                he has coached youth sports across Vineland and Atlantic City, served on the Vineland Midget Football League board, and run small businesses 
+                including Serafina’s Ristorante & Pizzeria and Parkside Laundromat—experience he says informs his interest in attracting new business and 
+                keeping residents in the county.
                 <br>
                 <br>
-                His campaign materials highlight broad priorities: improving educational opportunities, protecting natural resources, practicing 
-                fiscal responsibility with taxpayer dollars, enhancing roads and broadband, supporting senior housing and health care, and 
-                expanding recreational amenities. At a 2023 candidates forum he also spoke about the need for better county communication 
-                (including the launch of a new website) and a stronger local press, and stated his opposition to school vouchers.
+                His past and current campaign materials highlight broad priorities: improving educational opportunities, protecting natural resources, practicing fiscal 
+                responsibility with taxpayer dollars, enhancing roads and broadband, supporting senior housing and health care, and expanding recreational 
+                amenities. At a 2023 candidates forum he also spoke about the need for better county communication (including the launch of a new website) 
+                and a stronger local press, and stated his opposition to school vouchers. This opposition was reinforced in October 2025 when he posted on 
+                Facebook, 
+                <a href="https://www.facebook.com/share/p/1BG32Dfj5k/" target="_blank" rel="noopener noreferrer" class="website-link">School Choice Discussion</a>, 
+                in response to Jack Ciattarelli’s school voucher/school choice remarks during a gubernatorial debate. While education funding and 
+                policy are primarily school board/state-level issues, there is genuine overlap at the county level, with apparently county commissioners being 
+                involved in CCTEC's school board appointments and county monies helping to fund schools like CCTEC.
+                However, without a formal written position on a website or in a structured candidates’ forum where these kinds of relevant discussion should be had among 
+                all the candidates, many voters may be left wondering how relevant this is to the county commissioner race.
                 <br>
                 <br>
-                So far, however, public information about Capizola’s platform and appearances has been limited mostly to a joint Facebook page 
-                with running mate Yolanda Garcia Balicki. Beyond that page there are little to no policy specifics, event listings, or clearly advertised 
-                ways for voters to interact directly with the campaign. This mirrors my own repeated attempts to reach out, which have sometimes 
-                been routed between party figures or met with silence. Voters who value his résumé and community roots may find much to like, 
-                but those seeking detailed plans or reliable public engagement may still be waiting for more concrete outreach as the campaign 
-                progresses.
+                So far, public information about Capizola’s platform and appearances has been limited mostly to a joint Facebook page with running mate 
+                Yolanda Garcia Balicki. Beyond that page there are little to no policy specifics, event listings, or clearly advertised ways for voters 
+                to interact directly with the campaign. This mirrors my own repeated attempts to reach out, which have sometimes been routed between party 
+                figures or met with silence. Voters who value his résumé and community roots may find much to like, but those seeking detailed plans or 
+                reliable public engagement may still be waiting for more concrete outreach as the campaign season comes to an end.
                 <br>
                 <br>
                 Click the red x at the top of this box and then scroll down down for more in-depth information and sources.
@@ -189,26 +195,31 @@
               <h6 class="page-title">John P. Capizola</h6>
               <p>          
 
-                Transparency & Accessibility Rating Explanation (as of 9/11/25)
+                Transparency & Accessibility Rating Explanation (as of 10/13/25)
                 <br>
                 <br>
-                John Capizola brings a long record of local teaching, coaching, and small-business experience, and he was appointed to the Board 
-                of Commissioners in 2023. Yet despite that background, his 2025 campaign has so far offered only broad themes and a joint 
-                Facebook page with running mate Yolanda Garcia-Balicki—leaving little in the way of detailed, easily accessible issues based information.
+                John Capizola brings a long record of local teaching, coaching, and small-business experience, and he was appointed to the Board of 
+                Commissioners in 2023. While those credentials are solid, his 2025 campaign has so far leaned on broad themes and a joint Facebook page with 
+                running mate Yolanda Garcia-Balicki—offering little in the way of detailed, easily accessible issue-based information.
                 <br>
                 <br>
-                Repeated outreach over the past two years—including emails, letters, questionnaires, and attempts to attend public events—has 
-                resulted in inconsistent communication: shifting answers about who manages the campaign, no regularly advertised public meetings, 
-                and me even being escorted out of a meet-and-greet. The net effect is that voters looking for more than a résumé still lack a clear, 
-                public-facing outline of where Capizola stands on major county issues.
+                To his credit, Capizola is technically out and about on the campaign trail, appearing at county functions and community events where 
+                residents may bump into him. He also is out door knocking, though door knocking campaigns tend to be targeted towards reminding your base to 
+                get out and vote. Repeated outreach through emails, letters, questionnaires, and neutral forums has yielded little direct 
+                engagement. That choice—not to participate in centralized, accountable outlets designed for all candidates—means voters are left without 
+                a clear, consistent picture of his county-level platform.
                 <br>
                 <br>
-                This rating isn’t totally meant as a personal critique; Cumberland County as a whole still lacks a consistently robust system for 
-                providing voters with candidate information. But at a time when transparency and accessibility are essential, Capizola and county 
-                Democrats have put themselves in a position where their message is hard for the average voter to find. The door remains open for 
-                him and his running mate to improve this by sharing substantive plans—whether through questionnaires, interviews, a comprehensive 
-                campaign website,  or scheduled campaign events—so that residents can confidently assess how they would handle the county’s 
-                challenges.
+                This lands him at a Below Average rating: not invisible, but still leaving many unanswered questions. Voters who value résumé and familiarity 
+                may connect with him at in-person events, but those seeking transparent, structured opportunities to hear his views alongside other 
+                candidates will likely come away underwhelmed. The door remains open for improvement if he and his running mate step forward with 
+                substantive plans on their a campaign websites, or a willingness to participate in broader voter information efforts.
+                <br>
+                <br>
+                There is, to be totally fair, a fair counterpoint to be made that if the county had centralized campaign events like meet n greets, 
+                candidate's forums, introductory interviews, etc., then perhaps candidates like Capizola would just participate in them, giving that they 
+                would be well-established, trusted platforms. However, I started making suggestions like that 2.5 years ago when he was a sitting commissioner,
+                so.... here we are I guess.
                 <br>
                 <br>
                 Click the red x at the top of this box and then scroll down down for more in-depth information and sources.
@@ -319,7 +330,7 @@
         <h4 class="sub-heading extra-long">Transparency/Accessibility Rating: Low</h4>
         <a href="../../../child_pages/cc-elections/transparency_standards_page.html" target="_blank" rel="noopener noreferrer" class="website-link"><button class="candidate-ext-site">Transparency Standards Explained</button></a>                 
 
-        <img class="gauge" src="../../../assets/gauge_real_bad.svg" alt="">
+        <img class="gauge" src="../../../assets/gauge_kinda_bad.svg" alt="">
         <button id="rating-exp" class="rating-exp">anecdotal rating explanation</button>
     </div> 
         
@@ -352,8 +363,10 @@
 
         <h4 class="sub-heading">Agenda</h4>
             <div class="experience can-sec">
-                As of April 16th, the only info available regarding Capizola's current primary campaign is on the 
+                As of October 13th, the only info available regarding Capizola's current general election campaign is on the 
                 <a href="https://cumberlandnjdems.com/elections/our-democratic-candidates/" target="_blank" rel="noopener noreferrer" class="website-link"><button class="candidate-ext-site">CumberlandNJDems Party Site</button></a>                 
+                and his facebook page has one substantive thread 
+                <a href="https://www.facebook.com/share/p/1BG32Dfj5k/" target="_blank" rel="noopener noreferrer" class="website-link"><button class="candidate-ext-site">School Choice Discussion</button></a>                 
 
             </div>
 
