garcia-balicki update

--- a/child_pages/cc-elections/Candidates/balicki.html
+++ b/child_pages/cc-elections/Candidates/balicki.html
@@ -284,7 +284,7 @@
              <button id="quick-summary-reopen" class="quick-sum">quick summary</button>
 
              <div class="election-date">
-                 <p>This election is on November 5th, 2025</p>
+                 <p>This election is on November 4th, 2025</p>
              </div>
 
              <div class="animal-box">
@@ -338,8 +338,10 @@
 
             <h4 class="sub-heading">Agenda</h4>
             <div class="experience can-sec">
-                As of April 16th, the only info available regarding Balicki's current primary campaign is on the 
+                As of October 13th, the only info available regarding Balicki's current general election campaign is on the 
                 <a href="https://cumberlandnjdems.com/elections/our-democratic-candidates/" target="_blank" rel="noopener noreferrer" class="website-link"><button class="candidate-ext-site">CumberlandNJDems Party Site</button></a>                 
+                and the joint facebook campaign page with her ticket-mate: 
+                <a href="https://www.facebook.com/profile.php?id=61574930323850" target="_blank" rel="noopener noreferrer" class="website-link">Capizola and Garcia-Balicki Facebook Campaign Page</a>                 
 
             </div>
             
