albrecht and lods updates

--- a/child_pages/cc-elections/Candidates/albrecht.html
+++ b/child_pages/cc-elections/Candidates/albrecht.html
@@ -143,7 +143,8 @@
 
                 Doug Albrecht is seeking his third term on the Cumberland County Board of Commissioners, bringing years of business experience, economic 
                 training, and institutional knowledge to the role. A fiscal conservative, he has helped hold the line on county taxes for three consecutive 
-                years while supporting projects aimed at improving Cumberland’s historically low rankings in health, literacy, and household income.
+                years and, under the current board, supported a two-cent tax rate reduction in 2025—an achievement he frames as balancing fiscal 
+                responsibility with essential services.
                 <br>
                 <br>
                 His 2025 agenda continues to emphasize budget discipline, targeted economic growth, and practical infrastructure upgrades. Key priorities 
@@ -151,6 +152,12 @@
                 rural internet access, and overseeing responsible use of county facilities and capital projects—including the future of the county jail site. 
                 As liaison to the Cumberland County Library, he has also championed the largest renovation in four decades, expanding community programs and 
                 tech access.
+                <br>
+                <br>
+                Recent highlights from his tenure include backing county efforts to host a veterans’ benefits seminar designed to help residents navigate 
+                complex systems, supporting NJ Transit’s new Vineland Commuter Express, which connects Cumberland residents with job opportunities 
+                in Atlantic City, and not only having kept county taxes stagnant for 2 years, but also lowering them by 2 cents this year. 
+                These initiatives align with his focus on improving household income, workforce participation, and access to resources.
                 <br>
                 <br>
                 Albrecht’s positions reflect a blend of local problem-solving and cautious long-term planning—favoring shared services over tax hikes, 
