--- a/child_pages/cc-elections/Candidates/lods.html
+++ b/child_pages/cc-elections/Candidates/lods.html
@@ -142,22 +142,26 @@
               <h6 class="page-title">Victoria Lods</h6>
               <p>          
 
-                Victoria Groetsch-Lods is a first-term Cumberland County Commissioner with a background spanning communications, education, agriculture, 
-                and nonprofit leadership. She has served as a high school teacher, chief of staff in the State Senate, and the first executive director 
-                of Cumberland County Habitat for Humanity. Active on her family’s fifth-generation farm, she brings a direct perspective on the challenges 
+                Victoria Groetsch-Lods is a first-term Cumberland County Commissioner with a background spanning communications, education, agriculture, and 
+                nonprofit leadership. She has served as a high school teacher, chief of staff in the State Senate, and the first executive director of 
+                Cumberland County Habitat for Humanity. Active on her family’s fifth-generation farm, she brings a direct perspective on the challenges 
                 facing agriculture and frequently emphasizes the importance of meeting people “where they are” to ensure programs and resources are accessible.
                 <br>
                 <br>
-                Her current agenda highlights <strong>agriculture advocacy</strong> (connecting farmers with state programs and Rutgers partnerships), 
-                <strong>education and workforce development</strong> (expanding CCTECH seats and trade pathways), <strong>addiction and recovery 
-                awareness</strong> (with a focus on parent outreach), and <strong>responsible growth projects</strong> like the Nabb Avenue extension. 
-                She also stresses that recreation, open space, and health are essential to making Cumberland more attractive for employers and families.
-                    <br>
-                    <br>
+                Her current agenda highlights agriculture advocacy (connecting farmers with state programs and Rutgers partnerships), education and workforce 
+                development (expanding CCTECH seats and trade pathways), addiction and recovery awareness (with a focus on parent outreach), and 
+                responsible growth projects like the Nabb Avenue extension. She also stresses that recreation, open space, and health are essential to 
+                making Cumberland more attractive for employers and families.
+                <br>
+                <br>
+                Recent updates from her tenure include maintaining stable county taxes for two years and lowering the tax rate by two cents in 2025, 
+                spearheading a seminar to assist veterans in navigating benefits, and supporting the launch of NJ Transit’s new Vineland Commuter Express 
+                to connect residents with job opportunities in Atlantic City.
+                <br>
+                <br>
                 Lods is a consistent presence at civic events and county functions and has been more accessible than many peers in engaging with local press 
-                and interviews. She has 
-                increasingly outlined concrete initiatives and accomplishments, offering voters a clearer picture of her priorities compared to earlier in 
-                her tenure.
+                and interviews. She has increasingly outlined concrete initiatives and accomplishments, offering voters a clearer picture of her priorities when
+                compared to many other candidates throughout the county.
                 <br>
                 <br>
                 Click the red x at the top of this box and then scroll down down for more in-depth information and sources.
@@ -276,7 +280,7 @@
             <button id="quick-summary-reopen" class="quick-sum">quick summary</button>
 
              <div class="election-date">
-                 <p>This election is on November 5th, 2025</p>
+                 <p>This election is on November 4th, 2025</p>
              </div>
 
              <div class="animal-box">
@@ -545,7 +549,14 @@
             </div>
         </details>
     </div>
-            
+
+    <div class="video-box-modal can-sec">
+    <h3 class="video-heading">2025 Millville Candidates Meet n Greet, "Man on the Street" interview Commissioner Victoria Lods</h3>
+
+    <iframe src="https://www.youtube.com/embed/i__-RkaipEE?si=mEatwdtodzUZKhJk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>        <br><br>
+       
+    </div>
+
      <div class="candidate-agenda">
 
     <h4 class="sub-heading">Agenda</h4>
