albrecht dual modal buttons abandoned

--- a/child_pages/cc-elections/Candidates/albrecht.html
+++ b/child_pages/cc-elections/Candidates/albrecht.html
@@ -275,7 +275,35 @@
                 
             </div>
 
-            <button id="quick-summary-reopen" class="quick-sum">quick summary</button>
+            <!-- <button id="quick-summary-reopen" class="quick-sum">quick summary</button> -->
+             <details class="can-sec" id="quick-summary">
+                <summary style="color: blue;">
+                    <strong>Quick Summary</strong>
+                </summary>
+                Doug Albrecht is seeking his third term on the Cumberland County Board of Commissioners, bringing years of business experience, economic 
+                training, and institutional knowledge to the role. A fiscal conservative, he has helped hold the line on county taxes for three consecutive 
+                years and, under the current board, supported a two-cent tax rate reduction in 2025—an achievement he frames as balancing fiscal 
+                responsibility with essential services.
+                <br>
+                <br>
+                His 2025 agenda continues to emphasize budget discipline, targeted economic growth, and practical infrastructure upgrades. Key priorities 
+                include advancing the Nabb Avenue Extension to boost commercial development, completing the stalled Middle Mile broadband network to expand 
+                rural internet access, and overseeing responsible use of county facilities and capital projects—including the future of the county jail site. 
+                As liaison to the Cumberland County Library, he has also championed the largest renovation in four decades, expanding community programs and 
+                tech access.
+                <br>
+                <br>
+                Recent highlights from his tenure include backing county efforts to host a veterans’ benefits seminar designed to help residents navigate 
+                complex systems, supporting NJ Transit’s new Vineland Commuter Express, which connects Cumberland residents with job opportunities 
+                in Atlantic City, and not only having kept county taxes stagnant for 2 years, but also lowering them by 2 cents this year. 
+                These initiatives align with his focus on improving household income, workforce participation, and access to resources.
+                <br>
+                <br>
+                Albrecht’s positions reflect a blend of local problem-solving and cautious long-term planning—favoring shared services over tax hikes, 
+                incentives over eminent domain, and modernization without abandoning core services. While recent changes to GOP breakfast meetings have 
+                reduced one avenue for public access, his willingness to engage in extended interviews has given voters a detailed look at his record and 
+                plans well ahead of November.
+            </details>
 
              <div class="election-date">
                  <p>This election is on November 4th, 2025</p>
@@ -581,7 +609,27 @@
         <a href="../../../child_pages/cc-elections/transparency_standards_page.html" target="_blank" rel="noopener noreferrer" class="website-link"><button class="candidate-ext-site">Transparency Standards Explained</button></a>                 
 
         <img class="gauge" src="../../../assets/gauge_okay.svg" alt="">
-        <button id="rating-exp" class="rating-exp">anecdotal rating explanation</button>
+        <!-- <button id="rating-exp" class="rating-exp">anecdotal rating explanation</button> -->
+        <details class="can-sec" id="transparency-accessibility">
+            <summary style="color: blue;">
+                <strong>Explanation</strong>
+            </summary>
+            Douglas Albrecht remains the longest-serving member of the Cumberland County Board of Commissioners and one of the county’s most consistently accessible elected 
+                officials. Beyond attending GOP breakfasts and community events, he has repeatedly sat for long-form interviews—including two hour-long radio discussions and, 
+                more recently, an informal “man on the street” segment where he shared updates on county projects. In these settings he typically goes beyond surface talking 
+                points to explain the details, challenges, and trade-offs behind major initiatives.
+                <br><br>
+                That level of openness still stands out in a county where traditional press coverage has collapsed. But transparency is also a two-way street: local leaders can 
+                make themselves available, yet residents ultimately have to show up, listen, and vote. Public officials are busy—they can’t be everywhere all the time—and 
+                there’s a meaningful difference between casual appearances at fairs or food-truck festivals and a dedicated campaign event where voters get speeches, 
+                Q&amp;A sessions, and press time.
+                <br><br>
+                Albrecht gives the impression he would participate fully if a more robust civic-information system existed. He is already publicly engaged, has deep institutional 
+                knowledge, and is comfortable answering hard questions. With a little more structure—say, an annual forum or a two-hour podcast distilled into a written brief—his 
+                accessibility could set a new standard for Cumberland County. Until such a culture becomes the norm, his consistent willingness to engage earns him an above-average 
+                transparency rating.
+                <br><br>
+        </details>
     </div> 
 
     <br>
